--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,29 +1,45 @@
-# Fish by default
+# Configure your default shell, Fish in my case.
+set -g default-shell /usr/local/bin/fish 
 set -g default-command /usr/local/bin/fish
-set -g default-shell /usr/local/bin/fish
 
-# remap prefix from 'C-b' to 'C-a'
+# Plugin list
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+# Remap prefix from 'C-b' to 'C-a'
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
-# split panes using | and -
+# Split panes using | and -
 bind \ split-window -h
 bind - split-window -v
 unbind '"'
 unbind %
 
-# reload config file (change file location to your the tmux.conf you want to use)
+# Reload config file (change file location to your the tmux.conf you want to use)
 bind r source-file ~/.tmux.conf
 
-# switch panes using Alt-arrow without prefix
+# Use vim style copy/paste keys
+setw -g mode-keys vi
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'C-v' send -X rectangle-toggle
+bind-key -T copy-mode-vi 'y' send -X copy-selection
+unbind-key -T copy-mode-vi v
+
+# Switch panes using Alt-arrow without prefix
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
-# don't rename windows automatically
+# Don't rename windows automatically
 set-option -g allow-rename off
+
+# Mouse mode for window mgmt
+set -g mouse on
+
+# Resurrect vim
+set -g @resurrect-strategy-vim 'session'
 
 ######################
 ### DESIGN CHANGES ###
@@ -122,3 +138,7 @@ set -g message-fg colour232
 set -g message-bg colour166
 
 # }
+
+# Initialise plugin manager
+
+run '~/.tmux/plugins/tpm/tpm'
